# credit-risk-scoring

./: Dockerfile  README.md  pyproject.toml
models/: catboost_model.cbm  scaler.pkl
notebooks/: 01_eda_and_baseline.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/: api.py
