[project]
name = "credit-risk-scoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "catboost>=1.2.10",
    "fastapi>=0.136.3",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic>=2.13.4",
    "ruff>=0.15.12",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.49.0",
]
[tool.ruff]
line-length = 88
target-version = "py314" 

[tool.ruff.lint]
select = ["E", "F", "I"] 
ignore = []
